[package]
name = "oraml"
version = "0.1.0"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
edition = "2018"

[dependencies]
mltt-span = { git = "https://github.com/brendanzab/rust-nbe-for-mltt/", rev = "1fc253f707a4ea801409e89dc929c40bb28590de" }
language-reporting = { git = "https://github.com/nikomatsakis/language-reporting", branch = "remove-codespan-dep" }
log = "0.4"
simple_logger = "1.0.1"
unindent = "0.1.3"
itertools = "0.8.0"
proptest = "0.9.1"
