[package]
name = "oraide"
version = "0.0.1"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
edition = "2018"

[[bin]]
path = "src/main.rs"
name = "ora"

[dependencies]
oraide-span = { path = "components/oraide-span" }
oraide-parser-miniyaml = { path = "components/oraide-parser-miniyaml" }
oraide-miniyaml = { path = "components/oraide-miniyaml" }
oraide-sdk = { path = "components/oraide-sdk" }
oraide-language-server = { path = "components/oraide-language-server" }