[package]
name = "oraide-language-server"
version = "0.0.1"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
edition = "2018"

[dependencies]
oraide-span = { path = "../oraide-span" }
oraide-actor = { path = "../oraide-actor" }
oraide-parser-miniyaml = { path = "../oraide-parser-miniyaml" }
log = "^0.4"
salsa = "^0.12"
url = "^1.7"
serde = { version = "^1.0", features = [ "derive" ] }
languageserver-types = "0.54.0"
serde_json = "1.0.39"
