[package]
name = "oraide-parser-miniyaml"
version = "0.0.1"
description = "Implements textual MiniYaml parsing via incremental recomputation powered by the 'salsa' project"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
edition = "2018"

[dependencies]
oraide-span = { path = "../oraide-span" }
salsa = "^0.12"
itertools = "^0.8"
log = "^0.4"
indextree = { version = "^3", features = ["derive-eq"] }

[dev-dependencies]
unindent = "^0.1"
pretty_assertions = "^0.6"