[package]
name = "oraide-query-system"
version = "0.0.1"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
description = "An on-demand, incremental computation system"
edition = "2018"

[dependencies]
oraide-span = { path = "../oraide-span" }
oraide-parser-miniyaml = { path = "../oraide-parser-miniyaml" }
salsa = "^0.12"
oraide-actor = { path = "../oraide-actor" }
derive_more = "0.14.1"
languageserver-types = "0.54.0"
log = "0.4.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
