[package]
name = "oraide-sdk"
version = "0.0.1"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
log = "0.4.6"
itertools = "0.8.0"
salsa = "^0.12"
oraide-span = { path = "../oraide-span" }
oraide-parser-miniyaml = { path = "../oraide-parser-miniyaml" }
oraide-language-server = { path = "../oraide-language-server" }

[build-dependencies]
built = "0.3.0"
