[package]
name = "orals"
version = "0.0.1"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
serde = "1.0.89"
serde_json = "1.0.39"
jsonrpc-core = "10.1.0"
lsp-types = "0.56.0"
env_logger = "0.6.1"
lazy_static = "1.3.0"
num_cpus = "1.10.0"
rayon = "1.0.3"
crossbeam-channel = "0.3.8"
